src/main/java/com/example/tms/error/NoSuchTaskMaintainer.java
package com.example.tms.error;

public class NoSuchTaskMaintainer extends RuntimeException {
    public NoSuchTaskMaintainer(String message) {
        super(message);
    }
}
